@@ -55,7 +55,7 @@ href="http://lilypond-design.com/sponsor/">En savoir plus...</a> </div>
 <h2>
 Vous <em>appr&eacute;ciez LilyPond</em>&nbsp;?  </h2>
 
-Faites une donnation&nbsp;! Nous sugg&eacute;rons la somme de 25 euros.
+Faites un don&nbsp;! Nous sugg&eacute;rons la somme de 25 euros.
 Vous pouvez l'envoyer par
 
 <blockquote>
@@ -74,8 +74,8 @@ src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make 
 <tt>hanwen@xs4all.nl</tt>
 </blockquote>
 
-<em>Merci d'&eacute;viter les ch&egrave;ques, les encaisser nous
-co&ucirc;te environ 25 euros.<em>
+<em>Ne nous envoyez pas de ch&egrave;ques&nbsp;: leur encaissement nous co&ucirc;te environ
+25 euros.</em>
 
 </div>
 
