@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.2
+    Translation of CVS Revision: 1.3
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -12,20 +12,20 @@
 
 
 <body>
-Avec son int&eacute;r&ecirc;t pour la notation classique, vous pouvez vous demander
+Avec sa bonne aptitude pour la notation classique, vous pouvez vous demander
 si LilyPond est utilisable pour la musique contemporaine. La r&eacute;ponse
 est un <b>oui</b> retentissant.
 
 
-<h2>&laquo;Oui, mais je ne suis pas dou&eacute;...&raquo;</h2>
+<h2>&laquo;Voyez donc, aucun bricolage&nbsp;!&raquo;</h2>
 
 Si vous g&eacute;n&eacute;rez de la musique avec des logiciels, la publier est aussi
 simple que d'&eacute;crire des fichiers ASCII. Pour la musique contemporaine,
 vous allez appr&eacute;cier la souplesse de LilyPond pour sa gestion
-des mesures et des indicateurs de mesure. Voici un exemple de nolets
+des mesures et des chiffrages de mesure. Voici un exemple de nolets
 imbriqu&eacute;s. L'espacement est rigoureusement proportionnel &agrave; la dur&eacute;e de
 chaque note. Les barres de mesures ne g&ecirc;nent en rien, et deux notes ne
-seront superpos&eacute;es que si elles doivent &ecirc;tre jou&eacute;es en m&ecirc;me temps.
+seront align&eacute;es que si elles doivent &ecirc;tre attaqu&eacute;es en m&ecirc;me temps.
 
 <p>
 <center>
@@ -36,7 +36,7 @@ cliquez pour obtenir un fichier PDF.</center>
 <p>
 
 Avec n'importe quel autre programme, obtenir ce r&eacute;sultat n&eacute;cessite
-beaucoup de bricolage. Avec LilyPond, il suffit de saisir les notes,
+beaucoup de bricolages p&eacute;rilleux. Avec LilyPond, il suffit de saisir les notes,
 avec leur structure rythmique&nbsp;:
 
 <blockquote>
@@ -59,7 +59,7 @@ avec leur structure rythmique&nbsp;:
 Si le langage de programmation Scheme vous est familier, vous pouvez
 m&ecirc;me composer par algorithmes avec LilyPond&nbsp;!
 
-<h2>&laquo;Je m'en sors bien avec Lily&nbsp;!&raquo;</h2>
+<h2>&laquo;Voyez donc, seulement quelques bricolages&nbsp;!&raquo;</h2>
 
 Vous avez besoin d'une notation vraiment particuli&egrave;re&nbsp;? L'extr&ecirc;me
 souplesse de LilyPond vous permet par exemple de cr&eacute;er des
@@ -74,7 +74,7 @@ d'analyse Schenkerienne</a>&nbsp;:
 </center>
 
 
-<h2>Edition de graphiques</h2>
+<h2>&Eacute;dition de graphiques</h2>
 
 Si cela ne suffit pas, vous pouvez demandez &agrave; LilyPond d'&eacute;crire un
 fichier SVG, puis &eacute;diter le r&eacute;sultat final dans un &eacute;diteur tel que <a
